--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
 language: python
 python:
-	- "3.6"
+ - "3.6"
 
 install:
-	- python3 setup.py install
+ - python3 setup.py install
 
 script:
-	- python main.py
+ - python subseeker
